package main

import (
	"context"
	"log"
	"net"

	"google.golang.org/grpc"

	pb "path/to/your/proto/package"
)

type trisaNetworkServer struct{}

func (s *trisaNetworkServer) Transfer(ctx context.Context, req *pb.SecureEnvelope) (*pb.SecureEnvelope, error) {
	// Implement your logic here
}

// Implement other TrisaNetwork methods similarly

type trisaHealthServer struct{}

func (s *trisaHealthServer) Status(ctx context.Context, req *pb.HealthCheck) (*pb.ServiceState, error) {
	// Implement your logic here
}

func main() {
	// Create gRPC server
	server := grpc.NewServer()

	// Register your services
	pb.RegisterTrisaNetworkServer(server, &trisaNetworkServer{})
	pb.RegisterTRISAHealthServer(server, &trisaHealthServer{})

	// Start server
	listener, err := net.Listen("tcp", ":50051")
	if err != nil {
		log.Fatalf("Failed to listen: %v", err)
	}

	log.Println("Server listening on :50051")
	if err := server.Serve(listener); err != nil {
		log.Fatalf("Failed to serve: %v", err)
	}
}
